<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.justjava.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/customerName"
                android:inputType="textCapWords" />

            <TextView
                style="@style/header"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/whipped_cream"
                style="@style/toppings"
                android:text="@string/whippedCream" />

            <CheckBox
                android:id="@+id/chocolate"
                style="@style/toppings"
                android:text="@string/chocolate" />

            <TextView
                style="@style/header"
                android:text="@string/quantity_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/Button"
                    android:onClick="decrement"
                    android:text="@string/decrement"

                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/quantityText"
                    android:textColor="#000"
                    android:textSize="@dimen/text_small" />

                <Button
                    style="@style/Button"
                    android:onClick="increment"
                    android:text="@string/increment" />
            </LinearLayout>

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/orderButton"
                android:textSize="@dimen/text_small" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
